EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
== 02/26/2015 ==
Uleat: Updated light source criteria to (hopefully) match what the client uses (still needs tweaking)
Uleat: Changed 'general' light source checks to accept the last valid light source (client behavior)
Notes:
	- "Fire Beetle Eyes" are still causing issues in general slots (no item movement sound effect)
	- Wearable equipment types still register as valid light sources when in general slots (needs exemption criteria)

== 02/23/2015 ==
Uleat: Fix for RoF+ clients showing active 'Return Home' button when action is not available (swapped 'GoHome' and 'Enabled' fields in RoF-era CharacterSelectEntry structs)

== 02/21/2015 ==
Noudess: Starting erudites that were supposed to start in paineel were landing in erudin on Titanium. Fixed to be paineel.

== 02/20/2015 ==
demonstar55: Implement claims for RoF/RoF2 (should no longer crash the client!)
	- fixed bugs related to claims for the rest of the clients (woo infinite loops)

== 02/18/2015 ==
Trevius: Fix for potential recursive loops if using RemoveFromHateList() within EVENT_HATE_LIST.

== 02/17/2015 ==
Uleat: Implemented per-client character creation limiting. Caps are unknown atm..so, don't get over-zealous!
Notes:
	- Titanium is hard-coded to min/max of 8 in both the server and client translator code (client doesn't support variations in available character count)
	- SoF thru RoF2 have had their max characters raised to 12 from 10
	- Changing the number of characters per account is accomplished by:
		1) Setting consts::CHARACTER_CREATION_LIMIT to the desired count in the client's constants file in ../common/patches/
		2) Ensuring that eq_dictionary's EmuConstants::CHARACTER_CREATION_LIMIT is equal-greater than the client's new value..referencing is good
		3) Recompiling the server code
	- A rules-based qualifier may be added at some point

== 02/16/2015 ==